docs/pago-pa/sanp/3.11.0/SUMMARY.md
# Table of contents

* [⬅️ Torna a pagoPA.gov.it](https://www.pagopa.gov.it/)

## Specifiche attuative del nodo dei pagamenti SPC

* [Premessa](README.md)
* [Changelog](../../../EnBg5c1okkV2J4KL0TcG/specifiche-attuative-del-nodo-dei-pagamenti-spc/changelog.md)
* [Glossario](../../../EnBg5c1okkV2J4KL0TcG/specifiche-attuative-del-nodo-dei-pagamenti-spc/glossario.md)
* [Roadmap](../../../EnBg5c1okkV2J4KL0TcG/specifiche-attuative-del-nodo-dei-pagamenti-spc/roadmap.md)
* [Documentazione](../../../EnBg5c1okkV2J4KL0TcG/specifiche-attuative-del-nodo-dei-pagamenti-spc/documentazione.md)
* [Funzionamento generale](../../../EnBg5c1okkV2J4KL0TcG/specifiche-attuative-del-nodo-dei-pagamenti-spc/funzionamento-generale/README.md)
  * [Ruoli](../../../EnBg5c1okkV2J4KL0TcG/specifiche-attuative-del-nodo-dei-pagamenti-spc/funzionamento-generale/ruoli.md)
  * [Ciclo di vita di un pagamento](../../../EnBg5c1okkV2J4KL0TcG/specifiche-attuative-del-nodo-dei-pagamenti-spc/funzionamento-generale/ciclo-di-vita-di-un-pagamento.md)
  * [Processi di pagamento](../../../EnBg5c1okkV2J4KL0TcG/specifiche-attuative-del-nodo-dei-pagamenti-spc/funzionamento-generale/processi-di-pagamento.md)
  * [Rendicontazione e Cashflow](../../../EnBg5c1okkV2J4KL0TcG/specifiche-attuative-del-nodo-dei-pagamenti-spc/funzionamento-generale/rendicontazione-e-cashflow.md)
  * [Overview delle componenti](../../../EnBg5c1okkV2J4KL0TcG/specifiche-attuative-del-nodo-dei-pagamenti-spc/funzionamento-generale/overview-delle-componenti.md)
  * [Sicurezza e conservazione](../../../EnBg5c1okkV2J4KL0TcG/specifiche-attuative-del-nodo-dei-pagamenti-spc/funzionamento-generale/sicurezza-e-conservazione.md)
  * [L’adesione alla piattaforma pagoPA](../../../EnBg5c1okkV2J4KL0TcG/specifiche-attuative-del-nodo-dei-pagamenti-spc/funzionamento-generale/ladesione-alla-piattaforma-pagopa.md)
  * [Utilizzo del marchio pagoPA](../../../EnBg5c1okkV2J4KL0TcG/specifiche-attuative-del-nodo-dei-pagamenti-spc/funzionamento-generale/utilizzo-del-marchio-pagopa.md)
  * [Stand In](../../../EnBg5c1okkV2J4KL0TcG/specifiche-attuative-del-nodo-dei-pagamenti-spc/funzionamento-generale/stand-in.md)
* [Erogazione e Livelli di servizio](../../../EnBg5c1okkV2J4KL0TcG/specifiche-attuative-del-nodo-dei-pagamenti-spc/erogazione-e-livelli-di-servizio.md)
* [Modello dati](../../../EnBg5c1okkV2J4KL0TcG/specifiche-attuative-del-nodo-dei-pagamenti-spc/modello-dati.md)

## Casi d'uso

* [Pagamento di un avviso presso PSP](../../../EnBg5c1okkV2J4KL0TcG/casi-duso/pagamento-di-un-avviso-presso-psp.md)
* [Pagamento spontaneo presso PSP](../../../EnBg5c1okkV2J4KL0TcG/casi-duso/pagamento-spontaneo-presso-psp/README.md)
  * [Catalogo dei servizi](../../../EnBg5c1okkV2J4KL0TcG/casi-duso/pagamento-spontaneo-presso-psp/catalogo-dei-servizi.md)
  * [Bollo auto](../../../EnBg5c1okkV2J4KL0TcG/casi-duso/pagamento-spontaneo-presso-psp/bollo-auto.md)
  * [Passaporto](../../../EnBg5c1okkV2J4KL0TcG/casi-duso/pagamento-spontaneo-presso-psp/passaporto.md)
* [Pagamento presso frontend dell'EC](../../../EnBg5c1okkV2J4KL0TcG/casi-duso/pagamento-presso-frontend-dellec.md)
* [Pagamento da Touchpoint PagoPA](../../../EnBg5c1okkV2J4KL0TcG/casi-duso/pagamento-da-touchpoint-pagopa/README.md)
  * [Checkout](../../../EnBg5c1okkV2J4KL0TcG/casi-duso/pagamento-da-touchpoint-pagopa/checkout.md)
  * [App IO](../../../EnBg5c1okkV2J4KL0TcG/casi-duso/pagamento-da-touchpoint-pagopa/app-io.md)

## Ente Creditore

* [Adesione](../../../EnBg5c1okkV2J4KL0TcG/ente-creditore/adesione.md)
* [Modalità d'integrazione](../../../EnBg5c1okkV2J4KL0TcG/ente-creditore/modalita-dintegrazione/README.md)
  * [Integrazione tramite API asincrone](../../../EnBg5c1okkV2J4KL0TcG/ente-creditore/modalita-dintegrazione/integrazione-tramite-api-asincrone.md)
  * [Integrazione tramite API sincrone](../../../EnBg5c1okkV2J4KL0TcG/ente-creditore/modalita-dintegrazione/integrazione-tramite-api-sincrone.md)
  * [Integrazione touch point dell’EC con Checkout](../../../EnBg5c1okkV2J4KL0TcG/ente-creditore/modalita-dintegrazione/integrazione-touch-point-dellec-con-checkout.md)
  * [Best practice](../../../EnBg5c1okkV2J4KL0TcG/ente-creditore/modalita-dintegrazione/best-practice.md)
* [Generazione dell’Identificativo Univoco di Versamento](../../../EnBg5c1okkV2J4KL0TcG/ente-creditore/generazione-dellidentificativo-univoco-di-versamento.md)
* [Tassonomia dei servizi di incasso](../../../EnBg5c1okkV2J4KL0TcG/ente-creditore/tassonomia-dei-servizi-di-incasso.md)
* [SEPA RTP - Request To Pay](../../../EnBg5c1okkV2J4KL0TcG/ente-creditore/sepa-rtp-request-to-pay.md)
* [Tributi multi-beneficiario](../../../EnBg5c1okkV2J4KL0TcG/ente-creditore/tributi-multi-beneficiario.md)
* [Attestazione di pagamento](../../../EnBg5c1okkV2J4KL0TcG/ente-creditore/attestazione-di-pagamento.md)
* [Riconciliazione contabile](../../../EnBg5c1okkV2J4KL0TcG/ente-creditore/riconciliazione-contabile.md)
* [Stampa avvisi pagoPA](../../../EnBg5c1okkV2J4KL0TcG/ente-creditore/stampa-avvisi-pagopa.md)
* [Processo di avvio in Esercizio](../../../EnBg5c1okkV2J4KL0TcG/ente-creditore/processo-di-avvio-in-esercizio.md)
* [Opzioni di pagamento](../../../EnBg5c1okkV2J4KL0TcG/ente-creditore/opzioni-di-pagamento/README.md)
  * [Casi d'uso](../../../EnBg5c1okkV2J4KL0TcG/ente-creditore/opzioni-di-pagamento/casi-duso/README.md)
    * [Unica opzione totale](../../../EnBg5c1okkV2J4KL0TcG/ente-creditore/opzioni-di-pagamento/casi-duso/unica-opzione-totale.md)
    * [Più opzioni di pagamento con scadenze differenti](../../../EnBg5c1okkV2J4KL0TcG/ente-creditore/opzioni-di-pagamento/casi-duso/piu-opzioni-di-pagamento-con-scadenze-differenti.md)
    * [Unico piano rateale](../../../EnBg5c1okkV2J4KL0TcG/ente-creditore/opzioni-di-pagamento/casi-duso/unico-piano-rateale.md)
    * [Opzione totale e piano rateale (unico)](../../../EnBg5c1okkV2J4KL0TcG/ente-creditore/opzioni-di-pagamento/casi-duso/opzione-totale-e-piano-rateale-unico.md)
    * [Opzione con molteplici piani rateali (con o senza opzione totale)](../../../EnBg5c1okkV2J4KL0TcG/ente-creditore/opzioni-di-pagamento/casi-duso/opzione-con-molteplici-piani-rateali-con-o-senza-opzione-totale.md)
    * [Co-obbligati in solido](../../../EnBg5c1okkV2J4KL0TcG/ente-creditore/opzioni-di-pagamento/casi-duso/co-obbligati-in-solido.md)
* [Bollo Digitale](../../../EnBg5c1okkV2J4KL0TcG/ente-creditore/bollo-digitale/README.md)
  * [Servizio @e.bollo](../../../EnBg5c1okkV2J4KL0TcG/ente-creditore/bollo-digitale/servizio-e.bollo.md)
  * [Servizio @e.bollo 2.0](../../../EnBg5c1okkV2J4KL0TcG/ente-creditore/bollo-digitale/servizio-e.bollo-2.0/README.md)
    * [Pagamento dovuto](../../../EnBg5c1okkV2J4KL0TcG/ente-creditore/bollo-digitale/servizio-e.bollo-2.0/pagamento-dovuto.md)

## Prestatore di Servizi di Pagamento

* [Adesione](../../../EnBg5c1okkV2J4KL0TcG/prestatore-di-servizi-di-pagamento/adesione.md)
* [Modalità di integrazione](../../../EnBg5c1okkV2J4KL0TcG/prestatore-di-servizi-di-pagamento/modalita-di-integrazione/README.md)
  * [Integrazione tramite API](../../../EnBg5c1okkV2J4KL0TcG/prestatore-di-servizi-di-pagamento/modalita-di-integrazione/integrazione-tramite-api.md)
  * [Catalogo Dati Informativi](../../../EnBg5c1okkV2J4KL0TcG/prestatore-di-servizi-di-pagamento/modalita-di-integrazione/catalogo-dati-informativi.md)
  * [Offrire sistemi di pagamento su touchpoints di PagoPA S.p.A.](../../../EnBg5c1okkV2J4KL0TcG/prestatore-di-servizi-di-pagamento/modalita-di-integrazione/offrire-sistemi-di-pagamento-su-touchpoints-di-pagopa-s.p.a..md)
  * [Integrazione standard per gli strumenti di pagamento](../../../EnBg5c1okkV2J4KL0TcG/prestatore-di-servizi-di-pagamento/modalita-di-integrazione/integrazione-standard-per-gli-strumenti-di-pagamento.md)
  * [Integrazione per strumento di pagamento PayPal](../../../EnBg5c1okkV2J4KL0TcG/prestatore-di-servizi-di-pagamento/modalita-di-integrazione/integrazione-per-strumento-di-pagamento-paypal.md)
  * [Integrazione per strumento di pagamento tramite Redirect](../../../EnBg5c1okkV2J4KL0TcG/prestatore-di-servizi-di-pagamento/modalita-di-integrazione/integrazione-per-strumento-di-pagamento-tramite-redirect.md)
  * [Best practice](../../../EnBg5c1okkV2J4KL0TcG/prestatore-di-servizi-di-pagamento/modalita-di-integrazione/best-practice.md)
* [Commissioni](../../../EnBg5c1okkV2J4KL0TcG/prestatore-di-servizi-di-pagamento/commissioni.md)
* [Attestazione di pagamento](../../../EnBg5c1okkV2J4KL0TcG/prestatore-di-servizi-di-pagamento/attestazione-di-pagamento.md)
* [Processo di avvio in Esercizio](../../../EnBg5c1okkV2J4KL0TcG/prestatore-di-servizi-di-pagamento/processo-di-avvio-in-esercizio.md)
* [Quality Improvement](../../../EnBg5c1okkV2J4KL0TcG/prestatore-di-servizi-di-pagamento/quality-improvement.md)
* [Opzioni di pagamento](../../../EnBg5c1okkV2J4KL0TcG/prestatore-di-servizi-di-pagamento/opzioni-di-pagamento/README.md)
  * [Casi d'uso](../../../EnBg5c1okkV2J4KL0TcG/prestatore-di-servizi-di-pagamento/opzioni-di-pagamento/casi-duso/README.md)
    * [Unica opzione totale](../../../EnBg5c1okkV2J4KL0TcG/prestatore-di-servizi-di-pagamento/opzioni-di-pagamento/casi-duso/unica-opzione-totale.md)
    * [Più opzioni di pagamento con scadenze differenti](../../../EnBg5c1okkV2J4KL0TcG/prestatore-di-servizi-di-pagamento/opzioni-di-pagamento/casi-duso/piu-opzioni-di-pagamento-con-scadenze-differenti.md)
    * [Unico piano rateale](../../../EnBg5c1okkV2J4KL0TcG/prestatore-di-servizi-di-pagamento/opzioni-di-pagamento/casi-duso/unico-piano-rateale.md)
    * [Opzione totale e piano rateale (unico)](../../../EnBg5c1okkV2J4KL0TcG/prestatore-di-servizi-di-pagamento/opzioni-di-pagamento/casi-duso/opzione-totale-e-piano-rateale-unico.md)
    * [Opzioni con molteplici piani rateali (con o senza opzione totale)](../../../EnBg5c1okkV2J4KL0TcG/prestatore-di-servizi-di-pagamento/opzioni-di-pagamento/casi-duso/opzioni-con-molteplici-piani-rateali-con-o-senza-opzione-totale.md)
    * [Co-obbligati in solido](../../../EnBg5c1okkV2J4KL0TcG/prestatore-di-servizi-di-pagamento/opzioni-di-pagamento/casi-duso/co-obbligati-in-solido.md)

## Esperienza per il Cittadino

* [App IO](../../../EnBg5c1okkV2J4KL0TcG/esperienza-per-il-cittadino/app-io/README.md)
  * [Carte](../../../EnBg5c1okkV2J4KL0TcG/esperienza-per-il-cittadino/app-io/carte.md)
  * [PayPal](../../../EnBg5c1okkV2J4KL0TcG/esperienza-per-il-cittadino/app-io/paypal.md)
* [Checkout](../../../EnBg5c1okkV2J4KL0TcG/esperienza-per-il-cittadino/checkout.md)

## Appendici

* [Connettività](../../../EnBg5c1okkV2J4KL0TcG/appendici/connettivita.md)
* [Indicatori di qualità per i soggetti aderenti](../../../EnBg5c1okkV2J4KL0TcG/appendici/indicatori-di-qualita-per-i-soggetti-aderenti/README.md)
  * [Livelli di Servizio Enti Creditori](../../../EnBg5c1okkV2J4KL0TcG/appendici/indicatori-di-qualita-per-i-soggetti-aderenti/livelli-di-servizio-enti-creditori.md)
  * [Livelli di Servizio PSP](../../../EnBg5c1okkV2J4KL0TcG/appendici/indicatori-di-qualita-per-i-soggetti-aderenti/livelli-di-servizio-psp.md)
* [Giornale degli eventi](../../../EnBg5c1okkV2J4KL0TcG/appendici/giornale-degli-eventi.md)
* [Generazione e stampa degli avvisi](https://developer.pagopa.it/pago-pa/guides/avviso-pagamento)
* [Gestione evoluta commissioni](../../../EnBg5c1okkV2J4KL0TcG/appendici/gestione-evoluta-commissioni.md)
* [Primitive](../../../EnBg5c1okkV2J4KL0TcG/appendici/primitive/README.md)
  * [PSP](../../../EnBg5c1okkV2J4KL0TcG/appendici/primitive/psp/README.md)
    * [API SOAP](../../../EnBg5c1okkV2J4KL0TcG/appendici/primitive/psp/api-soap.md)
    * [API REST](../../../EnBg5c1okkV2J4KL0TcG/appendici/primitive/psp/api-rest/README.md)
      * [Backoffice](../../../EnBg5c1okkV2J4KL0TcG/appendici/primitive/psp/api-rest/backoffice.md)
      * [Integrazione tramite redirect](../../../EnBg5c1okkV2J4KL0TcG/appendici/primitive/psp/api-rest/integrazione-tramite-redirect.md)
      * [Flussi di Rendicontazione (FdR)](../../../EnBg5c1okkV2J4KL0TcG/appendici/primitive/psp/api-rest/flussi-di-rendicontazione-fdr.md)
      * [Opzioni di pagamento](../../../EnBg5c1okkV2J4KL0TcG/appendici/primitive/psp/api-rest/opzioni-di-pagamento.md)
  * [Ente Creditore](../../../EnBg5c1okkV2J4KL0TcG/appendici/primitive/ente-creditore/README.md)
    * [API SOAP](../../../EnBg5c1okkV2J4KL0TcG/appendici/primitive/ente-creditore/api-soap.md)
    * [API REST](../../../EnBg5c1okkV2J4KL0TcG/appendici/primitive/ente-creditore/api-rest/README.md)
      * [Recupero ricevute](../../../EnBg5c1okkV2J4KL0TcG/appendici/primitive/ente-creditore/api-rest/recupero-ricevute.md)
      * [Checkout](../../../EnBg5c1okkV2J4KL0TcG/appendici/primitive/ente-creditore/api-rest/checkout.md)
      * [E-bollo 2.0](../../../EnBg5c1okkV2J4KL0TcG/appendici/primitive/ente-creditore/api-rest/e-bollo-2.0.md)
      * [Creazione pdf avvisi pagamento](../../../EnBg5c1okkV2J4KL0TcG/appendici/primitive/ente-creditore/api-rest/creazione-pdf-avvisi-pagamento.md)
      * [Backoffice](../../../EnBg5c1okkV2J4KL0TcG/appendici/primitive/ente-creditore/api-rest/backoffice.md)
      * [Flussi di Rendicontazione (FdR)](../../../EnBg5c1okkV2J4KL0TcG/appendici/primitive/ente-creditore/api-rest/flussi-di-rendicontazione-fdr.md)
      * [Opzioni di pagamento](../../../EnBg5c1okkV2J4KL0TcG/appendici/primitive/ente-creditore/api-rest/opzioni-di-pagamento.md)
      * [Archivio Centralizzato Avvisi (ACA)](../../../EnBg5c1okkV2J4KL0TcG/appendici/primitive/ente-creditore/api-rest/archivio-centralizzato-avvisi-aca.md)
      * [Gestione Posizioni Debitorie (GPD)](../../../EnBg5c1okkV2J4KL0TcG/appendici/primitive/ente-creditore/api-rest/gestione-posizioni-debitorie-gpd.md)
* [Funzionalità deprecate](../../../EnBg5c1okkV2J4KL0TcG/appendici/funzionalita-deprecate.md)
* [Posizioni Debitorie](../../../EnBg5c1okkV2J4KL0TcG/appendici/posizioni-debitorie/README.md)
  * [Modello dei dati V1](../../../EnBg5c1okkV2J4KL0TcG/appendici/posizioni-debitorie/modello-dei-dati-v1.md)
  * [Modello dei dati V3](../../../EnBg5c1okkV2J4KL0TcG/appendici/posizioni-debitorie/modello-dei-dati-v3.md)
  * [Stati della posizione debitoria V1](../../../EnBg5c1okkV2J4KL0TcG/appendici/posizioni-debitorie/stati-della-posizione-debitoria-v1.md)
  * [Stati della posizione debitoria V3](../../../EnBg5c1okkV2J4KL0TcG/appendici/posizioni-debitorie/stati-della-posizione-debitoria-v3.md)
  * [Pagamenti presso frontend dell'EC in modalità asincrona](../../../EnBg5c1okkV2J4KL0TcG/appendici/posizioni-debitorie/pagamenti-presso-frontend-dellec-in-modalita-asincrona.md)
  * [Gestione Massiva](../../../EnBg5c1okkV2J4KL0TcG/appendici/posizioni-debitorie/gestione-massiva/README.md)
    * [📄 Specifiche tracciato di input](../../../EnBg5c1okkV2J4KL0TcG/appendici/posizioni-debitorie/gestione-massiva/specifiche-tracciato-di-input.md)
    * [⚙️ Gestione massiva tramite API REST](../../../EnBg5c1okkV2J4KL0TcG/appendici/posizioni-debitorie/gestione-massiva/gestione-massiva-tramite-api-rest.md)
    * [📥 Gestione massiva tramite SFTP](../../../EnBg5c1okkV2J4KL0TcG/appendici/posizioni-debitorie/gestione-massiva/gestione-massiva-tramite-sftp.md)
  * [Operazioni disponibili](../../../EnBg5c1okkV2J4KL0TcG/appendici/posizioni-debitorie/operazioni-disponibili.md)
* [POS Fisici](../../../EnBg5c1okkV2J4KL0TcG/appendici/pos-fisici.md)
* [Integrazione Servizio SRTP](../../../EnBg5c1okkV2J4KL0TcG/appendici/integrazione-servizio-srtp/README.md)
  * [EC](../../../EnBg5c1okkV2J4KL0TcG/appendici/integrazione-servizio-srtp/ec.md)
  * [PSP](../../../EnBg5c1okkV2J4KL0TcG/appendici/integrazione-servizio-srtp/psp.md)

## FAQ

* [Ente Creditore](../../../EnBg5c1okkV2J4KL0TcG/faq/ente-creditore.md)
* [PSP](../../../EnBg5c1okkV2J4KL0TcG/faq/psp.md)
* [Intermediario tecnologico](../../../EnBg5c1okkV2J4KL0TcG/faq/intermediario-tecnologico.md)
